// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation tests should render Navigation in dark mode 1`] = `
<DocumentFragment>
  .c5 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: medium;
  height: medium;
  margin-right: 0.75rem;
  background-color: transparent;
  width: fit-content;
}

.c5:hover:not(:active, :disabled) {
  background-color: #333;
}

.c5 .material-symbols-sharp {
  color: inherit;
}

.c5:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c6 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: medium;
  height: medium;
  width: fit-content;
}

.c6:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c6 .material-symbols-sharp {
  color: inherit;
}

.c6:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c0 {
  position: sticky;
  top: 0;
  z-index: 1000;
  display: flex;
  flex-shrink: 0;
  align-items: center;
  height: 5rem;
  padding: 0 1.25rem;
  transition: all 0.2s ease-in;
  background: rgba(31, 31, 31, 0.6);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
}

.c1 {
  display: flex;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  max-width: 1440px;
}

.c2 {
  display: flex;
  align-items: center;
}

.c4 {
  display: flex;
  margin-left: auto;
}

.c3 {
  display: inline-flex;
  justify-content: center;
  position: relative;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 50%;
  background-color: #000000;
}

.c3::before {
  content: "";
  position: absolute;
  bottom: 0.3125rem;
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: #FFFFFF;
}

<nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        />
      </div>
      <div
        class="c4"
      >
        <button
          class="c5"
          data-testid="button"
        >
          <span
            class=""
          >
            Sign In
          </span>
        </button>
        <button
          class="c6"
          data-testid="button"
        >
          <span
            class=""
          >
            Get Started
          </span>
        </button>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Navigation tests should renders Navigation correctly 1`] = `
<DocumentFragment>
  .c5 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #EEEEEE;
  color: #000000;
  width: medium;
  height: medium;
  margin-right: 0.75rem;
  background-color: transparent;
  width: fit-content;
}

.c5:hover:not(:active, :disabled) {
  background-color: #E2E2E2;
}

.c5 .material-symbols-sharp {
  color: inherit;
}

.c5:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c6 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: medium;
  height: medium;
  width: fit-content;
}

.c6:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c6 .material-symbols-sharp {
  color: inherit;
}

.c6:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c0 {
  position: sticky;
  top: 0;
  z-index: 1000;
  display: flex;
  flex-shrink: 0;
  align-items: center;
  height: 5rem;
  padding: 0 1.25rem;
  transition: all 0.2s ease-in;
  background: rgba(238, 238, 238, 0.7);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
}

.c1 {
  display: flex;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  max-width: 1440px;
}

.c2 {
  display: flex;
  align-items: center;
}

.c4 {
  display: flex;
  margin-left: auto;
}

.c3 {
  display: inline-flex;
  justify-content: center;
  position: relative;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 50%;
  background-color: #000000;
}

.c3::before {
  content: "";
  position: absolute;
  bottom: 0.3125rem;
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: #FFFFFF;
}

<nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        />
      </div>
      <div
        class="c4"
      >
        <button
          class="c5"
          data-testid="button"
        >
          <span
            class=""
          >
            Sign In
          </span>
        </button>
        <button
          class="c6"
          data-testid="button"
        >
          <span
            class=""
          >
            Get Started
          </span>
        </button>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
